clients/ffi/include/tarwyn.h

typedef struct Handle Handle;
int xt_get_bytes_list(const struct Handle *handle,
                      const char *channel,
                      uint8_t *out,
                      size_t capacity,
                      size_t *out_len);
int xt_put_double_list(const struct Handle *handle,
                       const char *channel,
                       const double *values,
                       size_t count);
int xt_get_double_list(const struct Handle *handle,
                       const char *channel,
                       double *out,
                       size_t capacity,
                       size_t *out_len);
int xt_put_float_list(const struct Handle *handle,
                      const char *channel,
                      const float *values,
                      size_t count);
int xt_get_float_list(const struct Handle *handle,
                      const char *channel,
                      float *out,
                      size_t capacity,
                      size_t *out_len);
int xt_put_integer_list(const struct Handle *handle,
                        const char *channel,
                        const int32_t *values,
                        size_t count);