clients/java-client/gen/tarwyn/ffi/tarwyn_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_bytes_list(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static FunctionDescriptor xt_get_bytes_list$descriptor() {
        return xt_get_bytes_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_bytes_list(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MethodHandle xt_get_bytes_list$handle() {
        return xt_get_bytes_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_bytes_list(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MemorySegment xt_get_bytes_list$address() {
        return xt_get_bytes_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_bytes_list(const struct Handle *handle, const char *channel, uint8_t *out, size_t capacity, size_t *out_len)
     * }
     */
    public static int xt_get_bytes_list(MemorySegment handle, MemorySegment channel, MemorySegment out, long capacity, MemorySegment out_len) {
        var mh$ = xt_get_bytes_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_bytes_list", handle, channel, out, capacity, out_len);
            }
            return (int)mh$.invokeExact(handle, channel, out, capacity, out_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_double_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_double_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_double_list(const struct Handle *handle, const char *channel, const double *values, size_t count)
     * }
     */
    public static FunctionDescriptor xt_put_double_list$descriptor() {
        return xt_put_double_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_double_list(const struct Handle *handle, const char *channel, const double *values, size_t count)
     * }
     */
    public static MethodHandle xt_put_double_list$handle() {
        return xt_put_double_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_double_list(const struct Handle *handle, const char *channel, const double *values, size_t count)
     * }
     */
    public static MemorySegment xt_put_double_list$address() {
        return xt_put_double_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_double_list(const struct Handle *handle, const char *channel, const double *values, size_t count)
     * }
     */
    public static int xt_put_double_list(MemorySegment handle, MemorySegment channel, MemorySegment values, long count) {
        var mh$ = xt_put_double_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_double_list", handle, channel, values, count);
            }
            return (int)mh$.invokeExact(handle, channel, values, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_double_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_double_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_double_list(const struct Handle *handle, const char *channel, double *out, size_t capacity, size_t *out_len)
     * }
     */
    public static FunctionDescriptor xt_get_double_list$descriptor() {
        return xt_get_double_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_double_list(const struct Handle *handle, const char *channel, double *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MethodHandle xt_get_double_list$handle() {
        return xt_get_double_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_double_list(const struct Handle *handle, const char *channel, double *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MemorySegment xt_get_double_list$address() {
        return xt_get_double_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_double_list(const struct Handle *handle, const char *channel, double *out, size_t capacity, size_t *out_len)
     * }
     */
    public static int xt_get_double_list(MemorySegment handle, MemorySegment channel, MemorySegment out, long capacity, MemorySegment out_len) {
        var mh$ = xt_get_double_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_double_list", handle, channel, out, capacity, out_len);
            }
            return (int)mh$.invokeExact(handle, channel, out, capacity, out_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_float_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_float_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_float_list(const struct Handle *handle, const char *channel, const float *values, size_t count)
     * }
     */
    public static FunctionDescriptor xt_put_float_list$descriptor() {
        return xt_put_float_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_float_list(const struct Handle *handle, const char *channel, const float *values, size_t count)
     * }
     */
    public static MethodHandle xt_put_float_list$handle() {
        return xt_put_float_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_put_float_list(const struct Handle *handle, const char *channel, const float *values, size_t count)
     * }
     */
    public static MemorySegment xt_put_float_list$address() {
        return xt_put_float_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_put_float_list(const struct Handle *handle, const char *channel, const float *values, size_t count)
     * }
     */
    public static int xt_put_float_list(MemorySegment handle, MemorySegment channel, MemorySegment values, long count) {
        var mh$ = xt_put_float_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_put_float_list", handle, channel, values, count);
            }
            return (int)mh$.invokeExact(handle, channel, values, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_get_float_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG,
            tarwyn_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_get_float_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_get_float_list(const struct Handle *handle, const char *channel, float *out, size_t capacity, size_t *out_len)
     * }
     */
    public static FunctionDescriptor xt_get_float_list$descriptor() {
        return xt_get_float_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_get_float_list(const struct Handle *handle, const char *channel, float *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MethodHandle xt_get_float_list$handle() {
        return xt_get_float_list.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int xt_get_float_list(const struct Handle *handle, const char *channel, float *out, size_t capacity, size_t *out_len)
     * }
     */
    public static MemorySegment xt_get_float_list$address() {
        return xt_get_float_list.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int xt_get_float_list(const struct Handle *handle, const char *channel, float *out, size_t capacity, size_t *out_len)
     * }
     */
    public static int xt_get_float_list(MemorySegment handle, MemorySegment channel, MemorySegment out, long capacity, MemorySegment out_len) {
        var mh$ = xt_get_float_list.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("xt_get_float_list", handle, channel, out, capacity, out_len);
            }
            return (int)mh$.invokeExact(handle, channel, out, capacity, out_len);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class xt_put_integer_list {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            tarwyn_h.C_INT,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_POINTER,
            tarwyn_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("xt_put_integer_list");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int xt_put_integer_list(const struct Handle *handle, const char *channel, const int32_t *values, size_t count)
     * }
     */
    public static FunctionDescriptor xt_put_integer_list$descriptor() {
        return xt_put_integer_list.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int xt_put_integer_list(const struct Handle *handle, const char *channel, const int32_t *values, size_t count)
     * }
     */
    public static MethodHandle xt_put_integer_list$handle() {
        return xt_put_integer_list.HANDLE;
    }
